# torch7-kinect

./: .gitignore  CMakeLists.txt  README.md  init.lua  kinect.c  libfreenect_sync.c  libfreenect_sync.h
generic/: kinect.c
